fixed spacing issues on exam shop

--- a/static/sass/_pattern_shop-cart.scss
+++ b/static/sass/_pattern_shop-cart.scss
@@ -5,6 +5,10 @@
     transition: 0.5s ease-out transform;
     z-index: 20;
 
+    &--cue{
+      bottom: 0; 
+    }
+
     &--hidden {
       transform: translateY(100%);
     }
